--- a/qos_header.adoc
+++ b/qos_header.adoc
@@ -64,7 +64,8 @@ include::qos_intro.adoc[]
 include::qos_identifiers.adoc[]
 include::qos_capacity.adoc[]
 include::qos_bandwidth.adoc[]
-include::qos_guidelines.adoc[]
+include::qos_hw_guidelines.adoc[]
+include::qos_sw_guidelines.adoc[]
 //the index must precede the bibliography
 include::qos_index.adoc[]
 include::qos_biblio.adoc[]
